--- a/src/app/pages/home/store/mirror/mirror-settings/mirror-settings.page.html
+++ b/src/app/pages/home/store/mirror/mirror-settings/mirror-settings.page.html
@@ -23,5 +23,10 @@
       <ion-icon name="md-create"></ion-icon>
       <span class="action-text">Editer Miroir</span>
     </div>
+
+    <div class="edit-button" (click)="unlink()">
+      <ion-icon name="md-trash"></ion-icon>
+      <span class="action-text">Dissocier Miroir</span>
+    </div>
   </div>
 </ion-content>
