--- a/src/app/pages/home/store/search/search.page.html
+++ b/src/app/pages/home/store/search/search.page.html
@@ -21,8 +21,8 @@
         </ion-avatar>
 
         <ion-label>
-          <h2>{{ application.title }}</h2>
-          <p>{{ application.category }}</p>
+          <h2 style="text-transform: capitalize;">{{ application.title }}</h2>
+          <p style="text-transform: capitalize;">{{ application.category }}</p>
         </ion-label>
       </ion-item>
 
